@@ -56,7 +56,7 @@ public class OLogNAlgorithm extends AbstractAlgorithm {
     @Override
     public Integer dispatchAlgorithm(String key) {
         int rateRange = repository.getRateRange(key);
-        Map<Map<Integer, Integer>, Integer> table = repository.getMap(key);
+        Map<Map<String, Integer>, Integer> table = repository.getMap(key);
         // 小于等于8 for循环、小于等于16 二分查找、更多检索走多线程
         if (table.size() <= 8) {
             log.info("抽奖算法 OLog(n) 抽奖计算（循环） key:{}", key);
@@ -70,13 +70,13 @@ public class OLogNAlgorithm extends AbstractAlgorithm {
         }
     }
 
-    private Integer forSearch(int rateKey, Map<Map<Integer, Integer>, Integer> table) {
+    private Integer forSearch(int rateKey, Map<Map<String, Integer>, Integer> table) {
         Integer awardId = null;
-        for (Map.Entry<Map<Integer, Integer>, Integer> entry : table.entrySet()) {
-            Map<Integer, Integer> rangeMap = entry.getKey();
+        for (Map.Entry<Map<String, Integer>, Integer> entry : table.entrySet()) {
+            Map<String, Integer> rangeMap = entry.getKey();
 
-            for (Map.Entry<Integer, Integer> range : rangeMap.entrySet()) {
-                int start = range.getKey();
+            for (Map.Entry<String, Integer> range : rangeMap.entrySet()) {
+                int start = Integer.parseInt(range.getKey());
                 int end = range.getValue();
 
                 if (rateKey >= start && rateKey <= end) {
@@ -93,20 +93,20 @@ public class OLogNAlgorithm extends AbstractAlgorithm {
         return awardId;
     }
 
-    private Integer binarySearch(int rateKey, Map<Map<Integer, Integer>, Integer> table) {
-        List<Map.Entry<Map<Integer, Integer>, Integer>> entries = new ArrayList<>(table.entrySet());
-        entries.sort(Comparator.comparingInt(e -> e.getKey().keySet().iterator().next()));
+    private Integer binarySearch(int rateKey, Map<Map<String, Integer>, Integer> table) {
+        List<Map.Entry<Map<String, Integer>, Integer>> entries = new ArrayList<>(table.entrySet());
+        entries.sort(Comparator.comparingInt(e -> Integer.parseInt(e.getKey().keySet().iterator().next())));
 
         int left = 0;
         int right = entries.size() - 1;
 
         while (left <= right) {
             int mid = left + (right - left) / 2;
-            Map.Entry<Map<Integer, Integer>, Integer> entry = entries.get(mid);
-            Map<Integer, Integer> rangeMap = entry.getKey();
-            Map.Entry<Integer, Integer> range = rangeMap.entrySet().iterator().next();
+            Map.Entry<Map<String, Integer>, Integer> entry = entries.get(mid);
+            Map<String, Integer> rangeMap = entry.getKey();
+            Map.Entry<String, Integer> range = rangeMap.entrySet().iterator().next();
 
-            int start = range.getKey();
+            int start = Integer.parseInt(range.getKey());
             int end = range.getValue();
 
             if (rateKey < start) {
@@ -121,12 +121,12 @@ public class OLogNAlgorithm extends AbstractAlgorithm {
         return null;
     }
 
-    private Integer threadSearch(int rateKey, Map<Map<Integer, Integer>, Integer> table) {
-        List<CompletableFuture<Map.Entry<Map<Integer, Integer>, Integer>>> futures = table.entrySet().stream()
+    private Integer threadSearch(int rateKey, Map<Map<String, Integer>, Integer> table) {
+        List<CompletableFuture<Map.Entry<Map<String, Integer>, Integer>>> futures = table.entrySet().stream()
                 .map(entry -> CompletableFuture.supplyAsync(() -> {
-                    Map<Integer, Integer> rangeMap = entry.getKey();
-                    for (Map.Entry<Integer, Integer> rangeEntry : rangeMap.entrySet()) {
-                        int start = rangeEntry.getKey();
+                    Map<String, Integer> rangeMap = entry.getKey();
+                    for (Map.Entry<String, Integer> rangeEntry : rangeMap.entrySet()) {
+                        int start = Integer.parseInt(rangeEntry.getKey());
                         int end = rangeEntry.getValue();
                         if (rateKey >= start && rateKey <= end) {
                             return entry;
@@ -134,21 +134,21 @@ public class OLogNAlgorithm extends AbstractAlgorithm {
                     }
                     return null;
                 }, threadPoolExecutor))
-                .collect(Collectors.toList());
+                .toList();
 
         CompletableFuture<Void> allFutures = CompletableFuture.allOf(futures.toArray(new CompletableFuture[0]));
 
         try {
             // 等待所有异步任务完成，同时返回第一个匹配的结果
             allFutures.join();
-            for (CompletableFuture<Map.Entry<Map<Integer, Integer>, Integer>> future : futures) {
-                Map.Entry<Map<Integer, Integer>, Integer> result = future.getNow(null);
+            for (CompletableFuture<Map.Entry<Map<String, Integer>, Integer>> future : futures) {
+                Map.Entry<Map<String, Integer>, Integer> result = future.getNow(null);
                 if (result != null) {
                     return result.getValue();
                 }
             }
         } catch (CompletionException e) {
-            e.printStackTrace();
+            log.error("threadSearch exception: ", e);
         }
 
         return null;
